[package]
name = "vtest2"
version = "0.1.0"
edition = "2021"

[lib]
name = "vtest2"
path = "src/lib.rs"

[dependencies]
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
thiserror = "1.0"
openssl = "0.10"
bytes = "1.5"
hpack = "0.3"  # HPACK compression - low-level control

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "h2_performance"
harness = false
